Fix strong text colors when using dark mode

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -189,7 +189,7 @@
 }
 
 .whatIsItem p strong {
-  color: initial;
+  color: var(--ifm-font-color-base);
   font-weight: 900;
 }
 
